# mmft-simulator

./: .gitignore  .gitmodule  CMakeLists.txt  MANIFEST.in  README.md  SignalAnalysis.py  cpp.hint  pyproject.toml  script.sed  setup.py
.github/: pull_request_template.md
ErrorResults/: Errors_0.001_1a.csv  Errors_0.001_2a.csv  Errors_0.01_1a.csv  Errors_4a.csv  Errors_baseline_1a.csv  Errors_baseline_2a.csv  (+5 more)
incl/: unistd.h
mmft/hybridsim/: CMakeLists.txt  bindings.cpp
python/mmft/simulator/: CMakeLists.txt  __init__.py  bindings.cpp  bindings.hpp
python/mmft/simulator/arch/: bind_channel.cpp  bind_edge.cpp  bind_enums.cpp  bind_membrane.cpp  bind_module.cpp  bind_network.cpp  bind_node.cpp  bind_opening.cpp  bind_pumps.cpp  bind_tank.cpp
python/mmft/simulator/sim/: bind_abstractContinuous.cpp  bind_abstractDroplet.cpp  bind_abstractMembrane.cpp  bind_abstractMixing.cpp  bind_droplet.cpp  bind_fluid.cpp  bind_hybridContinuous.cpp  bind_injections.cpp  bind_mixture.cpp  bind_results.cpp  bind_simulation.cpp  bind_specie.cpp
src/: CMakeLists.txt  baseSimulator.h  baseSimulator.hh  main.cpp
src/architecture/: CMakeLists.txt  Channel.h  Channel.hh  ChannelPosition.h  ChannelPosition.hh  DropletSolver.h  Edge.h  Edge.hh  FlowRatePump.h  FlowRatePump.hh  Membrane.h  Membrane.hh  Module.h  Module.hh  ModuleOpening.h  Network.h  Network.hh  Node.h  Node.hh  Platform.h  PressurePump.h  PressurePump.hh  Pump.h  Pump.hh  Tank.h  Tank.hh  essLbmDropletModule.h  essLbmMixingModule.h  essLbmModule.h  essLbmModule.hh  lbmModule.h  lbmModule.hh
src/architecture/definitions/: CMakeLists.txt  ChannelPosition.h  ModuleOpening.h
src/architecture/entities/: CMakeLists.txt  Channel.h  Channel.hh  Edge.h  Edge.hh  FlowRatePump.h  FlowRatePump.hh  Membrane.h  Membrane.hh  MixturePump.h  MixturePump.hh  Module.h  Module.hh  Node.h  Node.hh  PressurePump.h  PressurePump.hh  Tank.h
src/architecture/modules/: CFDModule.h  CFDModule.hh  CMakeLists.txt  ContinuousModule.h  ContinuousModule.hh  DropletModule.h  DropletModule.hh  Module.h  Module.hh  OrganModule.h  OrganModule.hh
src/hybridDynamics/: CMakeLists.txt  DynamicDamping.h  DynamicDamping.hh  LinearDecoupling.h  LinearDecoupling.hh  Naive.h  Naive.hh  Scheme.h  Scheme.hh
src/nodalAnalysis/: CMakeLists.txt  NodalAnalysis.h  NodalAnalysis.hh  NodalAnalysis_backup.h  NodalAnalysis_backup.hh
src/olbProcessors/: AdeConcBoundaries2D.h  AdeConcBoundaries2D.hh  CMakeLists.txt  adeConcBoundaries2D.h  adeConcBoundaries2D.hh  navierStokesAdvectionDiffusionCouplingPostProcessor2D.h  navierStokesAdvectionDiffusionCouplingPostProcessor2D.hh  navierStokesAdvectionDiffusionCouplingPostProcessor3D.h  navierStokesAdvectionDiffusionCouplingPostProcessor3D.hh  saturatedFluxPostProcessor2D.h  saturatedFluxPostProcessor2D.hh  setFunctionalRegularizedHeatFlux.h  setFunctionalRegularizedHeatFlux.hh  setFunctionalRegularizedHeatFlux2D.h  setFunctionalRegularizedHeatFlux2D.hh  setFunctionalRegularizedHeatFlux3D.h  setFunctionalRegularizedHeatFlux3D.hh
src/porting/: CMakeLists.txt  JSONPorter.h  JSONPorter.hh  jsonPorter.h  jsonPorter.hh  jsonReaders.h  jsonReaders.hh  jsonWriters.h  jsonWriters.hh
src/postProcessors/: dropletSearchPostProcessor2D.h  dropletSearchPostProcessor2D.hh  navierStokesAdvectionDiffusionCouplingPostProcessor2D.h  navierStokesAdvectionDiffusionCouplingPostProcessor2D.hh
src/result/: CMakeLists.txt  Results.h  Results.hh
src/simulation/: BolusInjection.h  BolusInjection.hh  CFDSim.h  CFDSim.hh  CMakeLists.txt  Droplet.h  Droplet.hh  Fluid.h  Fluid.hh  Injection.h  Injection.hh  MembraneModels.h  MembraneModels.hh  MixingModels.h  MixingModels.hh  Mixture.h  Mixture.hh  MixtureDistribution.h  MixtureDistribution.hh  MixtureInjection.h  MixtureInjection.hh  ResistanceModels.h  ResistanceModels.hh  Simulation.h  Simulation.hh  Specie.h  Specie.hh  Tissue.h  Tissue.hh
src/simulation/entities/: CMakeLists.txt  Droplet.h  Droplet.hh  Fluid.h  Fluid.hh  Mixture.h  Mixture.hh  Specie.h  Specie.hh  Tissue.h
src/simulation/events/: BoundaryEvent.h  BoundaryEvent.hh  CMakeLists.txt  CfdEvent.h  CfdEvent.hh  Event.h  InjectionEvent.h  InjectionEvent.hh  MergingEvent.h  MergingEvent.hh
src/simulation/models/: CMakeLists.txt  MembraneModels.h  MembraneModels.hh  MixingModels.h  MixingModels.hh  ResistanceModels.h  ResistanceModels.hh
src/simulation/operations/: CMakeLists.txt  Injection.h  Injection.hh  MixtureInjection.h  MixtureInjection.hh
src/simulation/simulators/: AbstractConcentration.h  AbstractConcentration.hh  AbstractContinuous.h  AbstractContinuous.hh  AbstractDroplet.h  AbstractDroplet.hh  AbstractMembrane.h  AbstractMembrane.hh  AbstractMixing.h  AbstractMixing.hh  CFDSim.h  CFDSim.hh  CMakeLists.txt  CfdConcentration.h  CfdConcentration.hh  CfdContinuous.h  CfdContinuous.hh  CfdMixing.h  CfdMixing.hh  HybridConcentration.h  HybridConcentration.hh  HybridContinuous.h  HybridContinuous.hh  HybridMixing.h  HybridMixing.hh  Simulation.h  Simulation.hh  cfdSimulator.h  cfdSimulator.hh  essContinuous.h  essContinuous.hh  essDroplet.h  essDroplet.hh  essMixing.h  essMixing.hh  olbContinuous.h  olbContinuous.hh  olbMixing.h  olbMixing.hh  olbOoc.h  (+3 more)
src/simulation/simulators/2D/: 2D.h  CMakeLists.txt  olbContinuous2D.h  olbContinuous2D.hh  olbMixing2D.h  olbMixing2D.hh  olbOoc2D.h  olbOoc2D.hh
src/simulation/simulators/3D/: 3D.h  CMakeLists.txt  olbContinuous3D.h  olbContinuous3D.hh  olbMixing3D.h  olbMixing3D.hh  olbOoc3D.h  olbOoc3D.hh
src/simulation/simulators/cfdHandlers/: cfdSimulator.h  cfdSimulator.hh  essContinuous.hh  olbContinuous.h  olbContinuous.hh  olbMixing.h  olbMixing.hh  olbOoc.h  olbOoc.hh
src/simulation/simulators/semantics/: CMakeLists.txt  ConcentrationSemantics.h  ConcentrationSemantics.hh
tests/abstract/: Architecture.test.cpp  BigDroplet.test.cpp  CMakeLists.txt  Concentration.test.cpp  Continuous.test.cpp  DiffusionMixing.test.cpp  Droplet.test.cpp  GradientGenerator.test.cpp  InstantaneousMixing.test.cpp  Membrane.test.cpp  Mixing.test.cpp  Tank.test.cpp  Topology.test.cpp  test_helpers.h
(+323 files in other folders)
