[build-system]
requires = [
    "setuptools>=61",
    "ninja>=1.10; sys_platform != 'win32'",
    "cmake>=3.21"
]
build-backend = "setuptools.build_meta"

[tool.mypy]
files = "setup.py"
python_version = "3.7"
strict = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
